syntax = "proto3";

option csharp_namespace = "NuttyTree.NetDaemon.Application.ElectronicsTime.gRPC";

package electronics_time;

service ElectronicsTimeGrpc {
    rpc GetApplicationConfig (ApplicationConfigRequest) returns (stream ApplicationConfigResponse);
    rpc GetStatus (StatusRequest) returns (stream StatusResponse);
    rpc SendDeviceStatus (DeviceStatus) returns (DeviceStatusResponse);
}

message ApplicationConfigRequest {
}

message ApplicationConfigResponse {
    string adminPassword = 1;
    repeated Application applications = 2;
}

message Application {
    string name = 1;
    repeated string allowedWindowTitles = 2;
    repeated string deniedWindowTitles = 3;
    bool allowOffline = 4;
    bool requiresTime = 5;
    ApplicationAllowType allowType = 6;
    repeated AllowedLocation allowedLocations = 7;
}

message AllowedLocation {
    string location = 1;
    ApplicationAllowType allowType = 2;
}

enum ApplicationAllowType {
    Never = 0;
    Daytime = 1;
    Always = 2;
}

message StatusRequest {
}

message StatusResponse {
    ElectronicsMode mode = 1;
    string location = 2;
    bool isDayTime = 3;
    double availableTime = 4;
    bool hasIncompleteTasks = 5;
}

enum ElectronicsMode {
    Restricted = 0;
    Normal = 1;
    Unrestricted = 2;
}

message DeviceStatus {
    string currentApp = 1;
    string currentPipApp = 2;
}

message DeviceStatusResponse {
}
